# apertium-ces-ces

./: .gitattributes  Makefile.am  README  apertium-ces-ces.ces-ces_han.dix  apertium-ces-ces.ces.dix  apertium-ces-ces.ces_han.dix  configure.ac  modes.xml
test/: ces-ces_han-input.txt  ces-ces_han-interchunk-expected.txt  ces-ces_han-morph-expected.txt  ces-ces_han-postchunk-expected.txt  ces-ces_han-postgen-expected.txt  ces-ces_han-tagger-expected.txt  tests.json
